<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView android:layout_height="158dp"
               android:layout_width="170dp"
               android:layout_marginStart="8dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:layout_marginTop="8dp"
               app:srcCompat="@drawable/dice_3"
               android:id="@+id/first_dice"
               app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/second_dice"/>

    <ImageView android:layout_height="158dp"
               android:layout_width="170dp"
               android:layout_marginEnd="16dp"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:layout_marginTop="8dp"
               app:srcCompat="@drawable/dice_4"
               android:id="@+id/second_dice" app:layout_constraintStart_toEndOf="@+id/first_dice"
               app:layout_constraintHorizontal_bias="0.5"/>

    <Button android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/roll_btn"
            android:text="@string/roll"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/first_dice"/>
    <TextView
            android:text="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/first_number"
            android:padding="@dimen/padding_small"
            android:textSize="@dimen/textsize_large"
            android:layout_marginTop="@dimen/margin_standard"
            app:layout_constraintEnd_toEndOf="@+id/first_dice"
            app:layout_constraintStart_toStartOf="@+id/first_dice"
            app:layout_constraintTop_toBottomOf="@+id/roll_btn"/>
    <TextView
            android:text="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="@dimen/textsize_large"
            android:id="@+id/second_number"
            android:layout_marginTop="@dimen/margin_standard"
            app:layout_constraintEnd_toEndOf="@+id/second_dice"
            app:layout_constraintStart_toStartOf="@+id/second_dice" app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintTop_toTopOf="@+id/first_number" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/first_number"/>
    <TextView
            android:text="+"
            android:textSize="@dimen/textsize_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/first_number"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/second_number"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/first_number"
            app:layout_constraintBottom_toBottomOf="@+id/first_number"/>

    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/sum_et"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_standard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_number"/>
    <Button
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:id="@+id/ok_btn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/sum_et" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/sum_et" app:layout_constraintBottom_toBottomOf="@+id/sum_et"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_large"
            tools:text="Bravo!"
            android:padding="8dp"
            android:id="@+id/result_tv" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/sum_et"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/result_icon"
            app:layout_constraintHorizontal_chainStyle="packed"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@drawable/ic_check"
            android:id="@+id/result_icon"
            app:layout_constraintStart_toEndOf="@+id/result_tv"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/result_tv"
            app:layout_constraintBottom_toBottomOf="@+id/result_tv"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>